syntax = "proto3";

package plantos.admin.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option java_package = "com.siesque.plantos.proto.admin.v1";
option java_multiple_files = true;

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_IDLE = 1;
  STATUS_WORKING = 2;
  STATUS_PAUSED = 3;
  STATUS_ERROR = 4;
  STATUS_OFFLINE = 5;
}

enum StatisticType {
  STATISTIC_TYPE_UNSPECIFIED = 0;
  STATISTIC_TYPE_TEMPERATURE = 1;
  STATISTIC_TYPE_HUMIDITY = 2;
  STATISTIC_TYPE_LIGHT = 3;
  STATISTIC_TYPE_SOIL_MOISTURE = 4;
  STATISTIC_TYPE_BATTERY = 5;
}

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_INVALID_REQUEST = 1;
  ERROR_CODE_ZONE_NOT_FOUND = 2;
  ERROR_CODE_MODULE_NOT_FOUND = 3;
  ERROR_CODE_MODULE_OFFLINE = 4;
  ERROR_CODE_INTERNAL_ERROR = 5;
  ERROR_CODE_INVALID_TIME_RANGE = 6;
  ERROR_CODE_VERSION_MISMATCH = 7;
}

message StatisticDataPoint {
  google.protobuf.Timestamp timestamp = 1;
  float value = 2;
}

message Statistic {
  StatisticType type = 1;
  repeated StatisticDataPoint history = 2;
}

message Zone {
  int32 id = 1;
  int32 module_id = 2;  // ID of the controlling module
  string name = 3;
  string icon = 4;  // Unicode emoji or icon identifier
  Status status = 5;
  google.protobuf.Timestamp last_watered = 6;

  // Current values only (not full history)
  repeated Statistic current_statistics = 7;
}

message Module {
  int32 id = 1;
  string name = 2;
  Status status = 3;

  // Battery percentage 0-100
  float battery_level = 4;

  // IDs of zones controlled by this module
  repeated int32 zone_ids = 5;

  // Last time module was seen
  google.protobuf.Timestamp last_seen = 6;
}

message ZoneSettings {
  int32 zone_id = 1;

  // Thresholds for alerts
  message Thresholds {
    float min_temperature = 1;  // Celsius
    float max_temperature = 2;  // Celsius
    float min_soil_moisture = 3;  // Percentage
    float max_soil_moisture = 4;  // Percentage
  }

  Thresholds thresholds = 2;

  // Notification settings
  bool notify_on_error = 3;
  bool notify_on_low_battery = 4;
}

// Request/Response Messages

// Client -> Hub: Initial handshake
message Hello {
  string protocol_version = 1;  // "1.0"
  string client_version = 2;    // Client app version
}

// Hub -> Client: Handshake response
message Welcome {
  string hub_id = 1;
  string hub_version = 2;
  google.protobuf.Timestamp server_timestamp = 3;  // Server time for sync
  bytes session_id = 4;  // 16 bytes (128-bit) random session ID for encryption
}

// Client -> Hub: Request to list all modules
message ListModulesRequest {
  // Empty - returns all modules
}

// Hub -> Client: Module list response
message ListModulesResponse {
  repeated Module modules = 1;
}

// Client -> Hub: Request module details
message GetModuleRequest {
  int32 module_id = 1;
}

// Hub -> Client: Module details
message GetModuleResponse {
  Module module = 1;
}

// Client -> Hub: List all zones
message ListZonesRequest {
  // Optional filter by module
  optional int32 module_id = 1;
}

// Hub -> Client: Zone list response
message ListZonesResponse {
  repeated Zone zones = 1;
}

// Client -> Hub: Request zone details
message GetZoneRequest {
  int32 zone_id = 1;
}

// Hub -> Client: Zone details
message GetZoneResponse {
  Zone zone = 1;
}

// Client -> Hub: Get historical statistics
message GetStatisticsRequest {
  int32 zone_id = 1;

  // Time range (required)
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;

  // Optional: specific statistic types (empty = all)
  repeated StatisticType types = 4;

  // Optional: data point aggregation
  enum Aggregation {
    AGGREGATION_NONE = 0;      // Raw data points
    AGGREGATION_HOURLY = 1;    // Hourly averages
    AGGREGATION_DAILY = 2;     // Daily averages
    AGGREGATION_WEEKLY = 3;    // Weekly averages
  }
  Aggregation aggregation = 5;
}

// Hub -> Client: Statistics response
message GetStatisticsResponse {
  int32 zone_id = 1;
  repeated Statistic statistics = 2;
}

// Settings management

message GetZoneSettingsRequest {
  int32 zone_id = 1;
}

message GetZoneSettingsResponse {
  ZoneSettings settings = 1;
}

message UpdateZoneSettingsRequest {
  ZoneSettings settings = 1;
}

message UpdateZoneSettingsResponse {
  bool success = 1;
  ZoneSettings updated_settings = 2;
}

// Hub -> Client: Server-push updates (broadcasts)

message ZoneUpdate {
  int32 zone_id = 1;
  Zone zone = 2;

  // What changed
  enum ChangeType {
    CHANGE_TYPE_UNSPECIFIED = 0;
    CHANGE_TYPE_STATUS = 1;
    CHANGE_TYPE_STATISTICS = 2;
    CHANGE_TYPE_SETTINGS = 3;
  }
  ChangeType change_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message ModuleUpdate {
  int32 module_id = 1;
  Module module = 2;

  enum ChangeType {
    CHANGE_TYPE_UNSPECIFIED = 0;
    CHANGE_TYPE_STATUS = 1;
    CHANGE_TYPE_BATTERY = 2;
    CHANGE_TYPE_ZONES = 3;
    CHANGE_TYPE_CONNECTED = 4;
    CHANGE_TYPE_DISCONNECTED = 5;
  }
  ChangeType change_type = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message StatisticsUpdate {
  int32 zone_id = 1;
  repeated Statistic updated_statistics = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Error response

message ErrorResponse {
  ErrorCode code = 1;
  string message = 2;

  // Optional: request that caused the error
  MessageType request_type = 3;
}

// Message type identifiers (4-byte prefix)
// Used for message routing

enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;

  // Client -> Hub
  MSG_HELLO = 1;
  MSG_LIST_MODULES_REQUEST = 2;
  MSG_GET_MODULE_REQUEST = 3;
  MSG_LIST_ZONES_REQUEST = 4;
  MSG_GET_ZONE_REQUEST = 5;
  MSG_GET_STATISTICS_REQUEST = 6;
  MSG_GET_ZONE_SETTINGS_REQUEST = 7;
  MSG_UPDATE_ZONE_SETTINGS_REQUEST = 8;

  // Hub -> Client
  MSG_WELCOME = 1001;
  MSG_LIST_MODULES_RESPONSE = 1002;
  MSG_GET_MODULE_RESPONSE = 1003;
  MSG_LIST_ZONES_RESPONSE = 1004;
  MSG_GET_ZONE_RESPONSE = 1005;
  MSG_GET_STATISTICS_RESPONSE = 1006;
  MSG_GET_ZONE_SETTINGS_RESPONSE = 1007;
  MSG_UPDATE_ZONE_SETTINGS_RESPONSE = 1008;

  // Broadcasts
  MSG_ZONE_UPDATE = 2001;
  MSG_MODULE_UPDATE = 2002;
  MSG_STATISTICS_UPDATE = 2003;

  // Errors
  MSG_ERROR_RESPONSE = 3001;
}
